# aoc2024

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
data/: day_01.enc.txt  day_02.enc.txt  day_03.enc.txt  day_04.enc.txt  day_05.enc.txt  day_06.enc.txt  day_07.enc.txt  day_08.enc.txt  day_09.enc.txt  day_10.enc.txt  day_11.enc.txt  day_12.enc.txt  day_13.enc.txt  day_14.enc.txt  day_15.enc.txt  day_16.enc.txt  day_17.enc.txt  day_18.enc.txt  day_20.enc.txt  day_22.enc.txt
fetch_day/: Cargo.toml
fetch_day/src/: main.rs
fetch_day/templates/go/: main.stpl.go  main_test.stpl.go
fetch_day/templates/rs/: Cargo.stpl.toml
fetch_day/templates/rs/benches/: bench.stpl.rs
fetch_day/templates/rs/src/: lib.stpl.rs
fetch_day/templates/ts/: day.bench.stpl.ts  day.stpl.ts  day.test.stpl.ts  main.stpl.ts
rs/day_01/: Cargo.toml  README.md
rs/day_01/benches/: bench.rs
rs/day_01/src/: lib.rs
rs/day_02/: Cargo.toml  README.md
rs/day_02/benches/: bench.rs
rs/day_02/src/: lib.rs
rs/day_03/: Cargo.toml  README.md
rs/day_03/benches/: bench.rs
rs/day_03/src/: lib.rs
rs/day_04/: Cargo.toml  README.md
rs/day_04/benches/: bench.rs
rs/day_04/src/: lib.rs
rs/day_05/: Cargo.toml  README.md
rs/day_05/benches/: bench.rs
rs/day_05/src/: lib.rs
rs/day_06/: Cargo.toml  README.md
rs/day_06/benches/: bench.rs
rs/day_06/src/: lib.rs
rs/day_07/: Cargo.toml  README.md
rs/day_07/benches/: bench.rs
rs/day_07/src/: lib.rs
rs/day_08/: Cargo.toml  README.md
rs/day_08/benches/: bench.rs
rs/day_08/src/: lib.rs
rs/day_09/: Cargo.toml  README.md
rs/day_09/benches/: bench.rs
rs/day_09/src/: lib.rs
rs/day_10/: Cargo.toml  README.md
rs/day_10/benches/: bench.rs
rs/day_10/src/: lib.rs
rs/day_11/: Cargo.toml  README.md
rs/day_11/benches/: bench.rs
rs/day_11/src/: lib.rs
rs/day_12/: Cargo.toml  README.md
rs/day_12/benches/: bench.rs
rs/day_12/src/: lib.rs
rs/day_13/: Cargo.toml  README.md
rs/day_13/benches/: bench.rs
rs/day_13/src/: lib.rs
rs/day_14/: Cargo.toml  README.md
rs/day_14/benches/: bench.rs
rs/day_14/src/: lib.rs
rs/day_15/: Cargo.toml  README.md
rs/day_15/benches/: bench.rs
rs/day_15/src/: lib.rs
rs/day_16/: Cargo.toml  README.md
rs/day_16/benches/: bench.rs
rs/day_16/src/: lib.rs
rs/day_17/: Cargo.toml  README.md
rs/day_17/benches/: bench.rs  perf.rs
rs/day_17/src/: lib.rs
rs/day_18/: Cargo.toml  README.md
rs/day_18/benches/: bench.rs
rs/day_18/src/: lib.rs
rs/day_20/: Cargo.toml  README.md
rs/day_20/benches/: bench.rs
rs/day_20/src/: lib.rs
rs/day_22/: Cargo.toml  README.md
rs/day_22/benches/: bench.rs
rs/day_22/src/: lib.rs
