[package]
name = "fetch_day"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
regex = "1.10.2"
reqwest = { version = "0.12.9", features = ["blocking"] }
toml_edit = "0.22.22"
sailfish = "0.9.0"
aes-gcm = { version = "0.10.3", features = ["std", "stream"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
