[package]
name = "fetch_day"
edition.workspace = true
version.workspace = true
description.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std", "stream"] }
anyhow.workspace = true
base64 = "0.22.1"
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
dotenvy = "0.15.7"
regex.workspace = true
reqwest = { version = "0.12.9", features = ["blocking"] }
sailfish = "0.9.0"

[lints]
workspace = true
