[package]
name = "day_18"
edition.workspace = true
version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
